# helm_audit

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml  qwen35-helm-run.md  run_details.yaml  run_developer_setup.sh  run_specs.yaml
configs/: apples_manifest.yaml  gpt_oss_20b_vllm_manifest.yaml  gpt_oss_20b_vllm_smoke_manifest.yaml  manifest_template.yaml  model_deployments_template.yaml  paper_label_mappings.yaml  qwen2_72b_vllm_manifest.yaml  qwen2_72b_vllm_smoke_manifest.yaml  qwen35_vllm_smoke_manifest.yaml  smoke_manifest.yaml
configs/debug/: repro_model_overrides.yaml  vicuna_no_chat_template.yaml
configs/virtual-experiments/: eee-only-demo.yaml  heatmap-paper-slim.yaml  open-helm-models-reproducibility.yaml  pythia-mmlu-stress.yaml
dev/analysis/: eee_refactor_stage1_map.md  eee_refactor_stage7_validation.md
dev/journals/: claude.md  codex.md  human.md
dev/lessons/: lessons.md
dev/oneoff/: audit_eee_only_run.py  clean_single_run_self_comparisons.py  dedupe_old_eee_conversions.py  diagnose_entity_matching_join.py  em_helm_mwe.sh  em_helm_mwe_run.py  em_pandas_mwe.sh  em_pandas_mwe_run.py  fixup_quac.sh  migrate_eee_source_org_tag.py  package_eee_helm_official.py
dev/paper/: .gitignore  2026-05-01_session_log-p2.md  case_study_3.tex  case_study_3_appendix.tex  format_feedback.md  main.tex  technical_report.tex  wikifact_consistency_claim.lean
dev/scripts/: configure-submodule-branches.sh  pull-submodules.sh  push-submodules.sh  submodule-status.sh
docs/: eee-only-hard-split-todo.md  eee-vs-helm-metadata.md  helm-gotchas.md  helm-null-completion-text-patch-proposal.md  helm-reproduction-agent-brief.md  helm-reproduction-research-journal.md  helm-reproduction-status-checkpoint.md  kwdagger-notes.md  open-model-helm-reproduction-master-plan.md  pipeline.md  reproduce-helm-session-v2.md
docs/paper/: 2026-04-30_eee_heatmap_session_log.md  2026-05-01_session_log-p2.md  2026-05-01_session_log.md  case_study_3.tex  case_study_3_appendix.tex  main.tex  wikifact_consistency_claim.lean
eval_audit/: __init__.py
eval_audit/cli/: __init__.py  analyze_backlog.py  analyze_experiment.py  analyze_many.py  build_virtual_experiment.py  check_env.py  compare.py  from_eee.py  index.py  index_historic_helm_runs.py  manifests.py  portfolio_status.py  rebuild_core.py  reports.py  run.py
eval_audit/compat/: helm_outputs.py
eval_audit/helm/: analysis.py  diff.py  hashers.py  metrics.py  run_entries.py
eval_audit/indexing/: __init__.py  schema.py
eval_audit/infra/: api.py  env.py  fs_publish.py  logging.py  paths.py  plotly_env.py  report_layout.py
eval_audit/integrations/: __init__.py  kwdagger_bridge.py
eval_audit/manifests/: builders.py  presets.py
eval_audit/normalized/: __init__.py  compare.py  eee_artifacts.py  helm_compat.py  joins.py  loaders.py  model.py
eval_audit/planning/: core_report_planner.py
eval_audit/reports/: __init__.py  aggregate.py  core_metrics.py  core_packet.py  core_packet_summary.py  eee_only_heatmap.py  filter_analysis.py  pair_report.py  pair_samples.py  paper_labels.py  quantiles.py
eval_audit/utils/: __init__.py  labels.py  numeric.py  sankey.py
eval_audit/virtual/: __init__.py  compose.py  coverage.py  manifest.py
eval_audit/workflows/: analyze_experiment.py  analyze_index_snapshot.py  analyze_official_index.py  build_reports_summary.py  compare_batch.py  index_results.py  plan_core_report_packets.py  prepare_eee_artifacts.py  rebuild_core_report.py  run_from_manifest.py
examples/: example_overnight_commands.sh  example_smoke_commands.sh
helm_audit/: __init__.py  model_registry.py
helm_audit/cli/: __init__.py  analyze_backlog.py  analyze_experiment.py  analyze_many.py  build_virtual_experiment.py  check_env.py  compare.py  index.py  index_historic_helm_runs.py  manifests.py  portfolio_status.py  rebuild_core.py  reports.py  run.py  summarize_experiment_failures.py
helm_audit/compat/: helm_outputs.py
helm_audit/helm/: __init__.py  _dataframes.py  _iterables.py  _msgspec.py  analysis.py  diff.py  hashers.py  metrics.py  outputs.py  run_entries.py
helm_audit/infra/: __init__.py  api.py  env.py  fs_publish.py  logging.py  paths.py  plotly_env.py  report_layout.py  yaml_io.py
helm_audit/integrations/: kwdagger_bridge.py
helm_audit/manifests/: __init__.py  builders.py  models.py  presets.py
helm_audit/normalized/: __init__.py  joins.py  loaders.py  model.py
helm_reproducibility/: aggregate_core_reports.py  analyze_experiment_from_index.py  build_repro_manifest.py  common.py  compare_batch.py  compare_pair.py  core_metric_report.py  index_results.py  inspect_pair_samples.py  make_manifest.py  metric_quantiles_report.py  paper_labels.py  rebuild_all_core_reports_from_index.py  rebuild_core_report_from_index.py  render_schedule_params.py  resolve_run.py
reproduce/: README.md
scripts/: aggregate_core_reports.sh  analyze_experiment_from_index.sh  check_env.sh  common.sh  compare_batch.sh  compare_entry.sh  compare_pair.sh  core_metric_report.sh  index_results.sh  inspect_pair_samples.sh  make_apples_manifest.sh  make_historic_grid_manifest.sh  make_machine_shard_manifest.sh  make_machine_subset_manifest.sh  make_repeat_pair_manifests.sh  make_smoke_manifest.sh  make_vicuna_nochat_manifest.sh  metric_quantiles_report.sh  rebuild_all_core_reports_from_index.sh  rebuild_core_report_from_index.sh  resolve_run.sh  run_from_manifest.sh  run_smoke.sh
tests/: test_compare_batch.py  test_core_metrics_single_run.py  test_eee_only_demo.py  test_end_to_end_summary.py  test_filter_analysis_plots.py  test_filter_report_artifacts.py  test_index_results.py  test_index_snapshot.py  test_normalized_compare.py  test_normalized_smoke.py  test_official_public_index.py  test_packet_driven_summary_loading.py  test_plan_core_report_packets.py  test_rebuild_core_report.py  test_run_surface.py  test_smoke.py  test_store_paths.py  test_summarize_experiment_failures.py  test_virtual_coverage.py  test_virtual_experiment.py  test_virtual_experiment_eee.py  test_vllm_service_integration.py
(+123 files in other folders)
