[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-audit"
version = "0.0.1"
description = "Python-first HELM audit and reproducibility workflow"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.26",
  "pandas>=2",
  "scriptconfig>=0.8.2",
  "seaborn>=0.13",
    "crfm-helm>=0.5.8",
    "pandas>=2.2.3",
    "dacite>=1.9.2",
    "ubelt>=1.3.8",
    "lazy_loader>=0.4",
    "scikit-learn>=1.7.1",
    "h5py>=3.14.0",
    "numexpr>=2.11.0",
    "kwarray>=0.7.1",
    "kwutil>=0.3.8", 
    "pygtrie>=2.5.0",
    "scriptconfig>=0.8.4",
    "orjson>=3.10.15",
    "msgspec>=0.19.0",
    "rich>=14.1.0",
    "fsspec>=2024.9.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.0.0",
    "ruamel.yaml>=0.17.22",
    "loguru>=0.7.3",
    "plotly>=6.0.0",
    "kaleido>=1.0.0",
]


[project.scripts]
eval-audit-check-env = "eval_audit.cli.check_env:main"
eval-audit-make-manifest = "eval_audit.cli.manifests:main"
eval-audit-run = "eval_audit.cli.run:main"
eval-audit-index = "eval_audit.workflows.index_results:main"
eval-audit-compare-pair = "eval_audit.reports.pair_report:main"
eval-audit-compare-batch = "eval_audit.workflows.compare_batch:main"
eval-audit-report-core = "eval_audit.reports.core_metrics:main"
eval-audit-report-aggregate = "eval_audit.reports.aggregate:main"
eval-audit-rebuild-core = "eval_audit.workflows.rebuild_core_report:main"
eval-audit-analyze-experiment = "eval_audit.workflows.analyze_experiment:main"
eval-audit-analyze-many = "eval_audit.cli.analyze_many:main"
eval-audit-build-summary = "eval_audit.workflows.build_reports_summary:main"
eval-audit-portfolio-status = "eval_audit.cli.portfolio_status:main"
eval-audit-analyze-index-snapshot = "eval_audit.workflows.analyze_index_snapshot:main"
eval-audit-prepare-eee = "eval_audit.workflows.prepare_eee_artifacts:main"
eval-audit-build-virtual-experiment = "eval_audit.cli.build_virtual_experiment:main"

[tool.setuptools.packages.find]
include = ["eval_audit*"]

[tool.pytest.ini_options]
# Collect tests from these roots only. Without this, pytest walks the entire
# repo, including old-backup-reports/, reports/, dev/, submodules/, etc.,
# which adds minutes to collection.
testpaths = ["tests"]
# Belt-and-suspenders: explicitly skip directories pytest should never enter
# even when invoked with a custom path or when conftest discovery walks up.
norecursedirs = [
  ".git",
  ".cache",
  ".claude",
  ".venv",
  ".venv13",
  ".venv313",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "__pycache__",
  "*.egg-info",
  "build",
  "dist",
  "configs",
  "dev",
  "docs",
  "examples",
  "in-progress-notes",
  "node_modules",
  "old-backup-reports",
  "reports",
  "reports-filter-bak",
  "reports-old",
  "reports-summary-bak",
  "reproduce",
  "submodules",
  "tmp",
]
